Update portfolio website with latest changes

--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,31 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#8b5cf6" />
     <meta
       name="description"
-      content="TJ - Game/Website Developer Portfolio"
+      content="TJ - 19-year-old self-taught programmer from Finland. Game/Website Developer specializing in Minecraft plugins, backend systems, and real-world projects."
     />
+    <meta name="keywords" content="TJ, programmer, developer, Minecraft, backend, Finland, software engineering, portfolio" />
+    <meta name="author" content="TJ" />
+    <meta name="robots" content="index, follow" />
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://your-domain.com/" />
+    <meta property="og:title" content="TJ - Game/Website Developer Portfolio" />
+    <meta property="og:description" content="19-year-old self-taught programmer from Finland. Game/Website Developer specializing in Minecraft plugins, backend systems, and real-world projects." />
+    <meta property="og:image" content="%PUBLIC_URL%/images/og-image.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://your-domain.com/" />
+    <meta property="twitter:title" content="TJ - Game/Website Developer Portfolio" />
+    <meta property="twitter:description" content="19-year-old self-taught programmer from Finland. Game/Website Developer specializing in Minecraft plugins, backend systems, and real-world projects." />
+    <meta property="twitter:image" content="%PUBLIC_URL%/images/og-image.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Poppins:wght@300;400;500;600;700&family=JetBrains+Mono:wght@300;400;500;600&family=Outfit:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <title>TJ - Game/Website Developer</title>
   </head>
   <body>
